[gd_scene load_steps=11 format=3 uid="uid://chy75p5f4y4v3"]

[ext_resource type="PackedScene" uid="uid://dysslyh566pny" path="res://scenes/SK/meters.tscn" id="1_1ylvk"]
[ext_resource type="Script" path="res://scenes/SK/main.gd" id="1_s2xeu"]
[ext_resource type="PackedScene" uid="uid://c3rg1ysw7612h" path="res://scenes/SK/work_mode.tscn" id="2_h07wu"]
[ext_resource type="PackedScene" uid="uid://cgrd817rpyvmj" path="res://scenes/SK/fun_mode.tscn" id="3_hsmt3"]
[ext_resource type="Script" path="res://scenes/SK/music_container.gd" id="5_6hhwi"]
[ext_resource type="AudioStream" uid="uid://c3io4f5d6tdu0" path="res://audio/music.wav" id="5_28o88"]
[ext_resource type="AudioStream" uid="uid://w3pxw3y7jlpm" path="res://audio/backround_noise.wav" id="6_gt2a1"]
[ext_resource type="AudioStream" uid="uid://csv7sn4sm17er" path="res://audio/drums.wav" id="8_1f5yd"]
[ext_resource type="AudioStream" uid="uid://o1lbf6aehvru" path="res://audio/toggle/phase_change_to_work.wav" id="9_4mowr"]
[ext_resource type="AudioStream" uid="uid://tts6780xiiej" path="res://audio/toggle/phase_change_to_play.wav" id="10_tpugv"]

[node name="Main" type="Node2D"]
script = ExtResource("1_s2xeu")

[node name="Meters" parent="." instance=ExtResource("1_1ylvk")]
z_index = 1

[node name="WorkMode" parent="." instance=ExtResource("2_h07wu")]

[node name="FunMode" parent="." instance=ExtResource("3_hsmt3")]
position = Vector2(20, 19)

[node name="MusicContainer" type="Node2D" parent="."]
script = ExtResource("5_6hhwi")

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="MusicContainer"]
stream = ExtResource("5_28o88")
volume_db = 2.0
autoplay = true
bus = &"Music"

[node name="BGNoiseAudioStreamPlayer" type="AudioStreamPlayer" parent="MusicContainer"]
stream = ExtResource("6_gt2a1")
volume_db = 2.0
autoplay = true
bus = &"Music"

[node name="DrumsAudioStreamPlayer" type="AudioStreamPlayer" parent="MusicContainer"]
stream = ExtResource("8_1f5yd")
volume_db = 2.0
autoplay = true
bus = &"Music"

[node name="ToggleSFX" type="Node2D" parent="."]

[node name="ToggleToWork" type="AudioStreamPlayer" parent="ToggleSFX"]
stream = ExtResource("9_4mowr")
volume_db = -15.0
bus = &"Sound"

[node name="ToggleToFun" type="AudioStreamPlayer" parent="ToggleSFX"]
stream = ExtResource("10_tpugv")
volume_db = -15.0
bus = &"Sound"

[connection signal="queue_size" from="WorkMode" to="MusicContainer" method="_on_work_mode_queue_size"]
[connection signal="toggle_requested" from="WorkMode" to="." method="_on_work_mode_toggle_requested"]
[connection signal="toggle_requested" from="FunMode" to="." method="_on_fun_mode_toggle_requested"]
